add changes and update some contents add images

--- a/index.html
+++ b/index.html
@@ -1159,8 +1159,9 @@
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
                 <div class="p-6 text-white">
-                  <h4 class="font-bold mb-2">Smart Detection</h4>
-                  <p class="text-sm opacity-90">Real-time disease identification using advanced AI algorithms</p>
+                  <h4 class="font-bold mb-2">ePaddy Mobile Dashboard</h4>
+                  <p class="text-sm opacity-90">Home screen of the ePaddy app providing real-time access to all key farming features</p>
+
                 </div>
               </div>
             </div>
@@ -1176,8 +1177,9 @@
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
                 <div class="p-6 text-white">
-                  <h4 class="font-bold mb-2">Water Control</h4>
-                  <p class="text-sm opacity-90">Intelligent irrigation scheduling based on soil moisture and weather</p>
+                  <h4 class="font-bold mb-2">Soil & Crop Advisor</h4>
+<p class="text-sm opacity-90">ePaddy mobile UI for entering NPK values and receiving suitable crop recommendations</p>
+
                 </div>
               </div>
             </div>
@@ -1193,8 +1195,9 @@
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
                 <div class="p-6 text-white">
-                  <h4 class="font-bold mb-2">Data Insights</h4>
-                  <p class="text-sm opacity-90">Detailed analytics and performance metrics for optimal farming</p>
+                  <h4 class="font-bold mb-2">Disease Detection</h4>
+<p class="text-sm opacity-90">ML-powered module in the ePaddy app for identifying paddy leaf diseases through image analysis</p>
+
                 </div>
               </div>
             </div>
@@ -1210,8 +1213,8 @@
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
                 <div class="p-6 text-white">
-                  <h4 class="font-bold mb-2">Weather Intel</h4>
-                  <p class="text-sm opacity-90">Accurate weather forecasting for better farming decisions</p>
+                  <h4 class="font-bold mb-2">Weather Alerts</h4>
+                  <p class="text-sm opacity-90">Real-time weather forecasting and alert notifications to prevent disease</p>
                 </div>
               </div>
             </div>
@@ -1228,8 +1231,9 @@
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
                 <div class="p-6 text-white">
-                  <h4 class="font-bold mb-2">Progress Monitor</h4>
-                  <p class="text-sm opacity-90">Track and analyze crop growth stages in real-time</p>
+                  <h4 class="font-bold mb-2">Growth Phase Display</h4>
+<p class="text-sm opacity-90">Visualizes different stages of paddy plant development to assist in crop management</p>
+
                 </div>
               </div>
             </div>
@@ -1246,8 +1250,9 @@
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
                 <div class="p-6 text-white">
-                  <h4 class="font-bold mb-2">Alert System</h4>
-                  <p class="text-sm opacity-90">Receive timely notifications for critical farming events</p>
+                 <h4 class="font-bold mb-2">Pest Identification</h4>
+<p class="text-sm opacity-90">Detects pest infestations in paddy plants using ML-powered analysis and provides early alerts</p>
+
                 </div>
               </div>
             </div>
@@ -1273,8 +1278,8 @@
                 class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
                 <div class="p-6 text-white">
                   <h4 class="font-bold mb-2">Field Research</h4>
-                  <p class="text-sm opacity-90">Conducting soil analysis and crop health assessment in traditional paddy
-                    fields</p>
+                  <p class="text-sm opacity-90">On-site evaluation of soil conditions and testing IoT devices for smart soil management in paddy fields</p>
+
                 </div>
               </div>
             </div>
@@ -1291,8 +1296,9 @@
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
                 <div class="p-6 text-white">
-                  <h4 class="font-bold mb-2">Scientific Analysis</h4>
-                  <p class="text-sm opacity-90">Gathering real-world data for AI model training and validation</p>
+                  <h4 class="font-bold mb-2">Field Research</h4>
+                  <p class="text-sm opacity-90">On-site evaluation of soil conditions and testing IoT devices for smart soil management in paddy fields</p>
+
                 </div>
               </div>
             </div>
@@ -1311,9 +1317,9 @@
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
                 <div class="p-6 text-white">
-                  <h4 class="font-bold mb-2">Community Engagement</h4>
-                  <p class="text-sm opacity-90">Understanding farmer challenges and requirements for better solutions
-                  </p>
+                  <h4 class="font-bold mb-2">Research Collaboration</h4>
+                  <p class="text-sm opacity-90">Data collection and expert consultations at Bathalagoda Rice Research Institute for model training and validation</p>
+
                 </div>
               </div>
             </div>
@@ -1329,8 +1335,9 @@
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
                 <div class="p-6 text-white">
-                  <h4 class="font-bold mb-2">Smart Sensors</h4>
-                  <p class="text-sm opacity-90">Deploying IoT devices for real-time environmental monitoring</p>
+                  <h4 class="font-bold mb-2">Field Deployment</h4>
+                  <p class="text-sm opacity-90">Visited paddy fields during harvest to observe deployed IoT sensors and assess field conditions</p>
+
                 </div>
               </div>
             </div>
@@ -1346,8 +1353,9 @@
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
                 <div class="p-6 text-white">
-                  <h4 class="font-bold mb-2">Crop Analysis</h4>
-                  <p class="text-sm opacity-90">Documenting various growth stages for comprehensive research</p>
+                  <h4 class="font-bold mb-2">Paddy Field Observation</h4>
+                  <p class="text-sm opacity-90">Visited paddy fields to observe crop growth, field layout, and natural farming conditions</p>
+
                 </div>
               </div>
             </div>
@@ -1363,8 +1371,60 @@
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
                 <div class="p-6 text-white">
-                  <h4 class="font-bold mb-2">Education Outreach</h4>
-                  <p class="text-sm opacity-90">Training sessions on modern agricultural technologies and practices</p>
+                  <h4 class="font-bold mb-2">Team Showcase</h4>
+                  <p class="text-sm opacity-90">Captured after PP2 presentation, showcasing the completed IoT device with the research team</p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-hover group fade-in-up" style="animation-delay: 1s;">
+            <div class="relative overflow-hidden rounded-3xl bg-white shadow-xl border border-emerald-100">
+              <div class="aspect-[4/3] bg-gradient-to-br from-teal-200 to-green-200 flex items-center justify-center">
+                <img src="assets/images/image7.jpeg" alt="Field Research"
+                  class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+              </div>
+              <div
+                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
+                <div class="p-6 text-white">
+                 <h4 class="font-bold mb-2">Disease Inspection</h4>
+                  <p class="text-sm opacity-90">Visited paddy fields to examine plant health and capture images for disease detection analysis</p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-hover group fade-in-up" style="animation-delay: 1s;">
+            <div class="relative overflow-hidden rounded-3xl bg-white shadow-xl border border-emerald-100">
+              <div class="aspect-[4/3] bg-gradient-to-br from-teal-200 to-green-200 flex items-center justify-center">
+                <img src="assets/images/image8.JPG" alt="Field Research"
+                  class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+              </div>
+              <div
+                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
+                <div class="p-6 text-white">
+                  <h4 class="font-bold mb-2">IoT Water Gate Control</h4>
+                  <p class="text-sm opacity-90">Automated irrigation system using ESP8266 and ultrasonic sensor for real-time water level management</p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-hover group fade-in-up" style="animation-delay: 1s;">
+            <div class="relative overflow-hidden rounded-3xl bg-white shadow-xl border border-emerald-100">
+              <div class="aspect-[4/3] bg-gradient-to-br from-teal-200 to-green-200 flex items-center justify-center">
+                <img src="assets/images/image6.jpeg" alt="Field Research"
+                  class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+              </div>
+              <div
+                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
+                <div class="p-6 text-white">
+                  <h4 class="font-bold mb-2">Soil Quality Monitoring</h4>
+                  <p class="text-sm opacity-90">Device used to measure NPK levels and soil moisture for accurate crop recommendations</p>
+
                 </div>
               </div>
             </div>
@@ -1408,7 +1468,7 @@
               <div class="w-12 h-12 bg-gradient-to-r from-emerald-400 to-green-500 rounded-full flex items-center justify-center text-white">📧</div>
               <div>
                 <h4 class="font-semibold text-gray-800">Email</h4>
-                <p class="text-gray-600">epaddy.project@gmail.com</p>
+                <p class="text-gray-600">epaddy@gmail.com</p>
               </div>
             </div>
 
@@ -1416,7 +1476,7 @@
               <div class="w-12 h-12 bg-gradient-to-r from-green-400 to-teal-500 rounded-full flex items-center justify-center text-white">📱</div>
               <div>
                 <h4 class="font-semibold text-gray-800">Phone</h4>
-                <p class="text-gray-600">+94 77 123 4567</p>
+                <p class="text-gray-600">+94 71 478 2241</p>
               </div>
             </div>
 
@@ -1478,22 +1538,33 @@
         <div>
           <h3 class="text-3xl font-black mb-6">ePADDY</h3>
           <p class="text-emerald-100 leading-relaxed mb-6">
-            Revolutionizing Sri Lankan agriculture through cutting-edge AI, IoT, and mobile technologies
+            Revolutionizing Sri Lankan agriculture through cutting-edge ML, IoT, and mobile technologies
             for sustainable and efficient paddy farming.
           </p>
           <div class="flex space-x-4">
-            <div
+            <!-- Facebook -->
+            <a href="https://www.facebook.com/epaddyproject" target="_blank" aria-label="Facebook"
               class="w-10 h-10 bg-white bg-opacity-20 rounded-full flex items-center justify-center hover:bg-opacity-30 transition-all duration-300 cursor-pointer">
-              📘
-            </div>
-            <div
+              <svg fill="currentColor" viewBox="0 0 24 24" class="w-5 h-5 text-blue-600">
+                <path d="M22 12.07C22 6.52 17.52 2 12 2S2 6.52 2 12.07c0 5.02 3.66 9.18 8.44 9.93v-7.02h-2.54V12.1h2.54V9.84c0-2.5 1.49-3.89 3.77-3.89 1.09 0 2.24.2 2.24.2v2.47h-1.26c-1.24 0-1.62.77-1.62 1.56v1.9h2.77l-.44 2.88h-2.33v7.02C18.34 21.25 22 17.09 22 12.07z"/>
+              </svg>
+            </a>
+
+            <!-- Twitter -->
+            <a href="https://twitter.com/epaddyproject" target="_blank" aria-label="Twitter"
               class="w-10 h-10 bg-white bg-opacity-20 rounded-full flex items-center justify-center hover:bg-opacity-30 transition-all duration-300 cursor-pointer">
-              🐦
-            </div>
-            <div
+              <svg fill="currentColor" viewBox="0 0 24 24" class="w-5 h-5 text-sky-500">
+                <path d="M22.46 6c-.77.35-1.6.58-2.47.69a4.32 4.32 0 0 0 1.88-2.38 8.59 8.59 0 0 1-2.72 1.04 4.29 4.29 0 0 0-7.29 3.91 12.17 12.17 0 0 1-8.84-4.48 4.27 4.27 0 0 0 1.33 5.73 4.26 4.26 0 0 1-1.95-.54v.05a4.29 4.29 0 0 0 3.44 4.2 4.28 4.28 0 0 1-1.94.07 4.29 4.29 0 0 0 4 2.98 8.6 8.6 0 0 1-6.3 1.76 12.15 12.15 0 0 0 6.58 1.93c7.89 0 12.21-6.54 12.21-12.22 0-.19-.01-.37-.02-.56A8.69 8.69 0 0 0 24 4.59a8.6 8.6 0 0 1-2.54.7z"/>
+              </svg>
+            </a>
+
+            <!-- LinkedIn -->
+            <a href="https://www.linkedin.com/company/epaddy" target="_blank" aria-label="LinkedIn"
               class="w-10 h-10 bg-white bg-opacity-20 rounded-full flex items-center justify-center hover:bg-opacity-30 transition-all duration-300 cursor-pointer">
-              💼
-            </div>
+              <svg fill="currentColor" viewBox="0 0 24 24" class="w-5 h-5 text-blue-700">
+                <path d="M20.45 20.45H17.2v-5.58c0-1.33-.03-3.04-1.85-3.04-1.86 0-2.14 1.45-2.14 2.94v5.68h-3.24V9h3.11v1.56h.05c.43-.81 1.48-1.66 3.06-1.66 3.27 0 3.88 2.15 3.88 4.94v6.61zM5.34 7.43c-1.04 0-1.89-.85-1.89-1.89 0-1.04.85-1.89 1.89-1.89 1.04 0 1.89.85 1.89 1.89 0 1.04-.85 1.89-1.89 1.89zM6.92 20.45H3.76V9h3.16v11.45zM22.22 0H1.78C.8 0 0 .8 0 1.78v20.44C0 23.2.8 24 1.78 24h20.44c.98 0 1.78-.8 1.78-1.78V1.78C24 .8 23.2 0 22.22 0z"/>
+              </svg>
+            </a>
           </div>
         </div>
 
@@ -1515,7 +1586,7 @@
         <div>
           <h4 class="text-xl font-bold mb-6">Features</h4>
           <ul class="space-y-3">
-            <li class="text-emerald-100">AI Disease Detection</li>
+            <li class="text-emerald-100">ML Disease Detection</li>
             <li class="text-emerald-100">Smart Irrigation</li>
             <li class="text-emerald-100">Weather Prediction</li>
             <li class="text-emerald-100">Growth Monitoring</li>
@@ -1526,10 +1597,10 @@
 
       <div class="border-t border-emerald-500 pt-8 flex flex-col md:flex-row justify-between items-center">
         <p class="text-emerald-100 mb-4 md:mb-0">
-          © 2024 ePaddy Project. All rights reserved.
+          © 2025 ePaddy Project. All rights reserved.
         </p>
         <p class="text-emerald-100">
-          Built with ❤️ for Sri Lankan Agriculture
+          
         </p>
       </div>
     </div>
