--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
             class="pulse-glow bg-gradient-to-r from-emerald-400 to-green-500 text-white px-8 py-4 rounded-full font-semibold text-lg hover:from-emerald-500 hover:to-green-600 transition-all duration-300 transform hover:scale-105 shadow-lg">
             Explore Innovation
           </button>
-          <button
-            class="glass-effect text-gray-700 px-8 py-4 rounded-full font-semibold text-lg hover:bg-emerald-500 hover:text-white transition-all duration-300 transform hover:scale-105 border border-emerald-300">
+          <a href="#showcase" class="glass-effect text-gray-700 px-8 py-4 rounded-full font-semibold text-lg hover:bg-emerald-500 hover:text-white transition-all duration-300 transform hover:scale-105 border border-emerald-300">
             Watch Demo
-          </button>
+          </a>
+
         </div>
       </div>
 
