--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@
         <div
           class="card-hover glass-effect p-8 rounded-3xl text-center group fade-in-up bg-white border border-emerald-100"
           style="animation-delay: 0.8s;">
-          <img src="assets/images/praveen.jpeg" alt="Liyanage L.D.P.D" class="w-25 h-25 rounded-full mx-auto mb-6">
+          <img src="assets/images/praveen-new.jpeg" alt="Liyanage L.D.P.D" class="w-25 h-25 rounded-full mx-auto mb-6">
           <h3 class="text-xl font-bold text-gray-800 mb-2">Liyanage L.D.P.D</h3>
           <p class="text-emerald-600 font-semibold">Member</p>
         </div>
