--- a/index.html
+++ b/index.html
@@ -581,6 +581,63 @@
     </div>
   </section>
 
+<!-- Methodology Section -->
+<section id="methodology" class="py-20 relative bg-gradient-to-br from-white to-emerald-50">
+  <div class="container mx-auto px-6">
+    <div class="text-center mb-16">
+      <h2 class="text-5xl font-bold text-gradient mb-6 fade-in-up">Methodology</h2>
+      <div class="w-24 h-1 bg-gradient-to-r from-emerald-400 to-green-500 mx-auto fade-in-up"></div>
+    </div>
+
+    <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12">
+      <!-- Phase 1 -->
+      <div class="glass-effect p-8 rounded-3xl bg-white border border-emerald-200 slide-in-left">
+        <h3 class="text-2xl font-bold text-emerald-600 mb-4">Phase 1: Research & Analysis</h3>
+        <p class="text-gray-700 text-lg leading-relaxed">
+          Conducted detailed literature review and field research to identify problems in Sri Lankan paddy farming. Collected soil, disease, pest, and climate datasets for training ML models.
+        </p>
+      </div>
+
+      <!-- Phase 2 -->
+      <div class="glass-effect p-8 rounded-3xl bg-white border border-emerald-200 slide-in-right">
+        <h3 class="text-2xl font-bold text-green-600 mb-4">Phase 2: System Design</h3>
+        <p class="text-gray-700 text-lg leading-relaxed">
+          Designed a modular system integrating mobile app (Flutter), AI (CNN, Gradient Boosting), and IoT sensors (ESP8266, ultrasonic, NPK). Established Firebase for real-time data and storage.
+        </p>
+      </div>
+
+      <!-- Phase 3 -->
+      <div class="glass-effect p-8 rounded-3xl bg-white border border-emerald-200 slide-in-left">
+        <h3 class="text-2xl font-bold text-teal-600 mb-4">Phase 3: Development</h3>
+        <p class="text-gray-700 text-lg leading-relaxed">
+          Implemented ML models for disease/pest detection, soil-based crop recommendation, and harvest stage prediction. Developed APIs using Flask and frontend with Dart + Flutter.
+        </p>
+      </div>
+
+      <!-- Phase 4 -->
+      <div class="glass-effect p-8 rounded-3xl bg-white border border-emerald-200 slide-in-right">
+        <h3 class="text-2xl font-bold text-lime-600 mb-4">Phase 4: Integration & Testing</h3>
+        <p class="text-gray-700 text-lg leading-relaxed">
+          Integrated all modules. Conducted functional testing in paddy fields. Verified real-time sensor readings, ML outputs, and mobile usability with farmers and experts.
+        </p>
+      </div>
+
+      <!-- Phase 5 -->
+      <div class="glass-effect p-8 rounded-3xl bg-white border border-emerald-200 fade-in-up md:col-span-2">
+        <h3 class="text-2xl font-bold text-emerald-700 mb-4 text-center">Phase 5: Deployment & Evaluation</h3>
+        <p class="text-gray-700 text-lg leading-relaxed text-center max-w-3xl mx-auto">
+          Deployed the system in real environments. Collected user feedback and performance data. Final adjustments were made to improve prediction accuracy, UI/UX, and irrigation response logic.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
   <!-- Enhanced Technologies Section -->
   <section id="technologies-detailed" class="py-20 relative bg-gradient-to-br from-emerald-50 to-green-50">
     <div class="container mx-auto px-6">
