--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                 class="card-hover glass-effect p-6 rounded-2xl flex-1 bg-gradient-to-br from-teal-50 to-green-50 border border-teal-200">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">Final Presentation Viva</h3>
                 <p class="text-gray-600 mb-3">Final project defense and comprehensive evaluation</p>
-                <div class="text-sm text-orange-600 font-semibold">Status: 📅 Upcoming</div>
+                 <div class="text-sm text-emerald-600 font-semibold">Status: ✅ Completed</div>
               </div>
             </div>
           </div>
