--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
               </div>
             </div>
 
-            <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.2s;">
+            <!-- <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.2s;">
               <div
                 class="w-16 h-16 bg-gradient-to-r from-emerald-400 to-green-500 rounded-full flex items-center justify-center text-white font-bold text-lg flex-shrink-0 shadow-lg">
                 3
@@ -852,8 +852,25 @@
                 <p class="text-gray-600 mb-3">Comprehensive project planning and initial research documentation</p>
                 <div class="text-sm text-emerald-600 font-semibold">Status: ✅ Completed</div>
               </div>
-            </div>
+            </div> -->
+<div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.2s;">
+  <div
+    class="w-16 h-16 bg-gradient-to-r from-emerald-400 to-green-500 rounded-full flex items-center justify-center text-white font-bold text-lg flex-shrink-0 shadow-lg">
+    3
+  </div>
+  <div
+    class="card-hover glass-effect p-6 rounded-2xl flex-1 bg-gradient-to-br from-emerald-50 to-green-50 border border-emerald-200">
+    <h3 class="text-xl font-bold text-gray-800 mb-2">Project Proposal Report</h3>
+    <p class="text-gray-600 mb-3">Comprehensive project planning and initial research documentation</p>
+    <div class="text-sm text-emerald-600 font-semibold mb-2">Status: ✅ Completed</div>
 
+    <!-- ✅ Progress Bar -->
+    <div class="w-full bg-emerald-100 rounded-full h-3">
+      <div class="bg-emerald-500 h-3 rounded-full" style="width: 12%;"></div>
+    </div>
+    <div class="text-xs text-gray-600 mt-1">Progress: 12%</div>
+  </div>
+</div>
             <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.3s;">
               <div
                 class="w-16 h-16 bg-gradient-to-r from-green-400 to-teal-500 rounded-full flex items-center justify-center text-white font-bold text-lg flex-shrink-0 shadow-lg">
