--- a/index.html
+++ b/index.html
@@ -841,7 +841,8 @@
               </div>
             </div>
 
-            <!-- <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.2s;">
+            
+            <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.2s;">
               <div
                 class="w-16 h-16 bg-gradient-to-r from-emerald-400 to-green-500 rounded-full flex items-center justify-center text-white font-bold text-lg flex-shrink-0 shadow-lg">
                 3
@@ -850,27 +851,16 @@
                 class="card-hover glass-effect p-6 rounded-2xl flex-1 bg-gradient-to-br from-emerald-50 to-green-50 border border-emerald-200">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">Project Proposal Report</h3>
                 <p class="text-gray-600 mb-3">Comprehensive project planning and initial research documentation</p>
-                <div class="text-sm text-emerald-600 font-semibold">Status: ✅ Completed</div>
-              </div>
-            </div> -->
-<div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.2s;">
-  <div
-    class="w-16 h-16 bg-gradient-to-r from-emerald-400 to-green-500 rounded-full flex items-center justify-center text-white font-bold text-lg flex-shrink-0 shadow-lg">
-    3
-  </div>
-  <div
-    class="card-hover glass-effect p-6 rounded-2xl flex-1 bg-gradient-to-br from-emerald-50 to-green-50 border border-emerald-200">
-    <h3 class="text-xl font-bold text-gray-800 mb-2">Project Proposal Report</h3>
-    <p class="text-gray-600 mb-3">Comprehensive project planning and initial research documentation</p>
-    <div class="text-sm text-emerald-600 font-semibold mb-2">Status: ✅ Completed</div>
+                <div class="text-sm text-emerald-600 font-semibold mb-2">Status: ✅ Completed</div>
 
-    <!-- ✅ Progress Bar -->
-    <div class="w-full bg-emerald-100 rounded-full h-3">
-      <div class="bg-emerald-500 h-3 rounded-full" style="width: 12%;"></div>
-    </div>
-    <div class="text-xs text-gray-600 mt-1">Progress: 12%</div>
-  </div>
-</div>
+                <!-- ✅ Progress Bar -->
+                <div class="w-full bg-emerald-100 rounded-full h-3">
+                  <div class="bg-emerald-500 h-3 rounded-full" style="width: 6%;"></div>
+                </div>
+                <div class="text-xs text-gray-600 mt-1">Progress: 6%</div>
+              </div>
+            </div>
+
             <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.3s;">
               <div
                 class="w-16 h-16 bg-gradient-to-r from-green-400 to-teal-500 rounded-full flex items-center justify-center text-white font-bold text-lg flex-shrink-0 shadow-lg">
@@ -880,9 +870,16 @@
                 class="card-hover glass-effect p-6 rounded-2xl flex-1 bg-gradient-to-br from-green-50 to-teal-50 border border-green-200">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">Project Proposal Presentation</h3>
                 <p class="text-gray-600 mb-3">Initial presentation of project concept and methodology</p>
-                <div class="text-sm text-emerald-600 font-semibold">Status: ✅ Completed</div>
+                <div class="text-sm text-emerald-600 font-semibold mb-2">Status: ✅ Completed</div>
+
+                <!-- ✅ Progress Bar -->
+                <div class="w-full bg-emerald-100 rounded-full h-3">
+                  <div class="bg-emerald-500 h-3 rounded-full" style="width: 6%;"></div>
+                </div>
+                <div class="text-xs text-gray-600 mt-1">Progress: 6%</div>
               </div>
             </div>
+
 
             <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.4s;">
               <div
@@ -1125,7 +1122,7 @@
           <h3 class="text-2xl font-bold text-gray-800 mb-1">Final Presentation</h3>
           <p class="text-sm text-gray-600 mb-4">Submitted on 2025/05/27</p>
           <p class="text-gray-600 mb-6">Final project presentation and viva demonstration.</p>
-          <a href="/docs/presentation/final-presentation.pdf" download
+          <a href="https://docs.google.com/presentation/d/1_qDvoHz1G3zIouyaMX6ZaW-KiiBVeJkb/edit?usp=sharing&ouid=107536426631165055808&rtpof=true&sd=true" download
             class="bg-gradient-to-r from-teal-400 to-emerald-500 text-white px-6 py-3 rounded-full font-semibold hover:from-teal-500 hover:to-emerald-600 transition-all duration-300 transform hover:scale-105 shadow-md">
             Download
           </a>
