add all changes to git

--- a/index.html
+++ b/index.html
@@ -881,6 +881,7 @@
             </div>
 
 
+            <!-- Progress Presentation 1 -->
             <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.4s;">
               <div
                 class="w-16 h-16 bg-gradient-to-r from-teal-400 to-emerald-500 rounded-full flex items-center justify-center text-white font-bold text-lg flex-shrink-0 shadow-lg">
@@ -890,10 +891,17 @@
                 class="card-hover glass-effect p-6 rounded-2xl flex-1 bg-gradient-to-br from-teal-50 to-emerald-50 border border-teal-200">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">Progress Presentation 1</h3>
                 <p class="text-gray-600 mb-3">First milestone review showcasing initial development progress</p>
-                <div class="text-sm text-emerald-600 font-semibold">Status: ✅ Completed</div>
+                <div class="text-sm text-emerald-600 font-semibold mb-2">Status: ✅ Completed</div>
+
+                <!-- ✅ Progress Bar: 18% -->
+                <div class="w-full bg-emerald-100 rounded-full h-3">
+                  <div class="bg-emerald-500 h-3 rounded-full" style="width: 15%;"></div>
+                </div>
+                <div class="text-xs text-gray-600 mt-1">Progress: 15%</div>
               </div>
             </div>
 
+            <!-- Research Paper -->
             <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.5s;">
               <div
                 class="w-16 h-16 bg-gradient-to-r from-emerald-500 to-green-600 rounded-full flex items-center justify-center text-white font-bold text-lg flex-shrink-0 shadow-lg">
@@ -903,10 +911,18 @@
                 class="card-hover glass-effect p-6 rounded-2xl flex-1 bg-gradient-to-br from-emerald-50 to-green-50 border border-emerald-200">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">Research Paper</h3>
                 <p class="text-gray-600 mb-3">Academic paper documenting research findings and methodology</p>
-                <div class="text-sm text-emerald-600 font-semibold">Status: ✅ Completed</div>
+                <div class="text-sm text-emerald-600 font-semibold mb-2">Status: ✅ Completed</div>
+
+                <!-- ✅ Progress Bar: 10% -->
+                <div class="w-full bg-emerald-100 rounded-full h-3">
+                  <div class="bg-emerald-500 h-3 rounded-full" style="width: 10%;"></div>
+                </div>
+                <div class="text-xs text-gray-600 mt-1">Progress: 10%</div>
               </div>
             </div>
 
+
+            <!-- Progress Presentation 2 -->
             <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.6s;">
               <div
                 class="w-16 h-16 bg-gradient-to-r from-green-500 to-lime-500 rounded-full flex items-center justify-center text-white font-bold text-lg flex-shrink-0 shadow-lg">
@@ -916,10 +932,17 @@
                 class="card-hover glass-effect p-6 rounded-2xl flex-1 bg-gradient-to-br from-green-50 to-lime-50 border border-green-200">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">Progress Presentation 2</h3>
                 <p class="text-gray-600 mb-3">Second milestone review with advanced feature demonstrations</p>
-                <div class="text-sm text-emerald-600 font-semibold">Status: ✅ Completed</div>
+                <div class="text-sm text-emerald-600 font-semibold mb-2">Status: ✅ Completed</div>
+
+                <!-- ✅ Progress Bar: 18% -->
+                <div class="w-full bg-emerald-100 rounded-full h-3">
+                  <div class="bg-emerald-500 h-3 rounded-full" style="width: 18%;"></div>
+                </div>
+                <div class="text-xs text-gray-600 mt-1">Progress: 18%</div>
               </div>
             </div>
 
+            <!-- Final Report -->
             <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.7s;">
               <div
                 class="w-16 h-16 bg-gradient-to-r from-lime-400 to-emerald-500 rounded-full flex items-center justify-center text-white font-bold text-lg flex-shrink-0 shadow-lg">
@@ -929,10 +952,17 @@
                 class="card-hover glass-effect p-6 rounded-2xl flex-1 bg-gradient-to-br from-lime-50 to-emerald-50 border border-lime-200">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">Final Report</h3>
                 <p class="text-gray-600 mb-3">Complete project documentation with results and analysis</p>
-                <div class="text-sm text-emerald-600 font-semibold">Status: ✅ Completed</div>
+                <div class="text-sm text-emerald-600 font-semibold mb-2">Status: ✅ Completed</div>
+
+                <!-- ✅ Progress Bar: 19% -->
+                <div class="w-full bg-emerald-100 rounded-full h-3">
+                  <div class="bg-emerald-500 h-3 rounded-full" style="width: 19%;"></div>
+                </div>
+                <div class="text-xs text-gray-600 mt-1">Progress: 19%</div>
               </div>
             </div>
 
+            <!-- Website Assessment -->
             <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.8s;">
               <div
                 class="w-16 h-16 bg-gradient-to-r from-emerald-400 to-teal-500 rounded-full flex items-center justify-center text-white font-bold text-lg flex-shrink-0 shadow-lg">
@@ -942,9 +972,16 @@
                 class="card-hover glass-effect p-6 rounded-2xl flex-1 bg-gradient-to-br from-emerald-50 to-teal-50 border border-emerald-200">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">Website Assessment</h3>
                 <p class="text-gray-600 mb-3">Evaluation of project website and digital presence</p>
-                <div class="text-sm text-orange-600 font-semibold">Status: 📅 Upcoming</div>
+                <div class="text-sm text-orange-600 font-semibold mb-2">Status: 📅 Upcoming</div>
+
+                <!-- 🔜 Progress Bar: 2% -->
+                <div class="w-full bg-orange-100 rounded-full h-3">
+                  <div class="bg-orange-500 h-3 rounded-full" style="width: 2%;"></div>
+                </div>
+                <div class="text-xs text-gray-600 mt-1">Progress: 2%</div>
               </div>
             </div>
+
 
             <div class="flex items-start space-x-8 fade-in-up" style="animation-delay: 0.9s;">
               <div
@@ -955,9 +992,16 @@
                 class="card-hover glass-effect p-6 rounded-2xl flex-1 bg-gradient-to-br from-teal-50 to-green-50 border border-teal-200">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">Final Presentation Viva</h3>
                 <p class="text-gray-600 mb-3">Final project defense and comprehensive evaluation</p>
-                 <div class="text-sm text-emerald-600 font-semibold">Status: ✅ Completed</div>
+                <div class="text-sm text-emerald-600 font-semibold mb-2">Status: ✅ Completed</div>
+
+                <!-- ✅ Progress Bar: 18% -->
+                <div class="w-full bg-emerald-100 rounded-full h-3">
+                  <div class="bg-emerald-500 h-3 rounded-full" style="width: 18%;"></div>
+                </div>
+                <div class="text-xs text-gray-600 mt-1">Progress: 18%</div>
               </div>
             </div>
+
           </div>
         </div>
       </div>
