--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
                 <div class="w-full bg-emerald-100 rounded-full h-3">
                   <div class="bg-emerald-500 h-3 rounded-full" style="width: 6%;"></div>
                 </div>
-                <div class="text-xs text-gray-600 mt-1">Progress: 6%</div>
+                <div class="text-xs text-gray-600 mt-1">marks: 6%</div>
               </div>
             </div>
 
@@ -876,7 +876,7 @@
                 <div class="w-full bg-emerald-100 rounded-full h-3">
                   <div class="bg-emerald-500 h-3 rounded-full" style="width: 6%;"></div>
                 </div>
-                <div class="text-xs text-gray-600 mt-1">Progress: 6%</div>
+                <div class="text-xs text-gray-600 mt-1">marks: 6%</div>
               </div>
             </div>
 
@@ -897,7 +897,7 @@
                 <div class="w-full bg-emerald-100 rounded-full h-3">
                   <div class="bg-emerald-500 h-3 rounded-full" style="width: 15%;"></div>
                 </div>
-                <div class="text-xs text-gray-600 mt-1">Progress: 15%</div>
+                <div class="text-xs text-gray-600 mt-1">marks: 15%</div>
               </div>
             </div>
 
@@ -917,7 +917,7 @@
                 <div class="w-full bg-emerald-100 rounded-full h-3">
                   <div class="bg-emerald-500 h-3 rounded-full" style="width: 10%;"></div>
                 </div>
-                <div class="text-xs text-gray-600 mt-1">Progress: 10%</div>
+                <div class="text-xs text-gray-600 mt-1">marks: 10%</div>
               </div>
             </div>
 
@@ -938,7 +938,7 @@
                 <div class="w-full bg-emerald-100 rounded-full h-3">
                   <div class="bg-emerald-500 h-3 rounded-full" style="width: 18%;"></div>
                 </div>
-                <div class="text-xs text-gray-600 mt-1">Progress: 18%</div>
+                <div class="text-xs text-gray-600 mt-1">marks: 18%</div>
               </div>
             </div>
 
@@ -958,7 +958,7 @@
                 <div class="w-full bg-emerald-100 rounded-full h-3">
                   <div class="bg-emerald-500 h-3 rounded-full" style="width: 19%;"></div>
                 </div>
-                <div class="text-xs text-gray-600 mt-1">Progress: 19%</div>
+                <div class="text-xs text-gray-600 mt-1">marks: 19%</div>
               </div>
             </div>
 
@@ -978,7 +978,7 @@
                 <div class="w-full bg-orange-100 rounded-full h-3">
                   <div class="bg-orange-500 h-3 rounded-full" style="width: 2%;"></div>
                 </div>
-                <div class="text-xs text-gray-600 mt-1">Progress: 2%</div>
+                <div class="text-xs text-gray-600 mt-1">marks: 2%</div>
               </div>
             </div>
 
@@ -996,9 +996,9 @@
 
                 <!-- ✅ Progress Bar: 18% -->
                 <div class="w-full bg-emerald-100 rounded-full h-3">
-                  <div class="bg-emerald-500 h-3 rounded-full" style="width: 18%;"></div>
+                  <div class="bg-emerald-500 h-3 rounded-full" style="width: 20%;"></div>
                 </div>
-                <div class="text-xs text-gray-600 mt-1">Progress: 18%</div>
+                <div class="text-xs text-gray-600 mt-1">marks: 20%</div>
               </div>
             </div>
 
